# audio-intent-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/models/: llm.py  pipeline.py  stt.py
app/prompts/: intent_classification.py
app/services/: audio.py  llm.py  orchestrator.py  stt.py
app/utils/: logging.py  storage.py
docs/: pythong_overview.md
final_results/: final_17c691d2-abc8-4cb6-8269-5e0132e5886a.json  final_3445a898-b586-4325-b79f-f043c632a881.json  final_3629a7e8-94de-4ded-a303-ad85ce72e13e.json  final_70f0c830-46e5-4bfd-b25b-35dbd559cc50.json  final_9c574582-2465-4a35-bead-77d1fb76188d.json  final_bc1dd88f-4e13-437e-b680-86fb47f22f8d.json  final_c3bb1b28-badd-4c1b-833a-55731443550d.json  final_dcd13a75-8a24-4a87-9342-9bc88ec92182.json  final_ed4c65d1-352c-450a-977f-1c2fbad1abeb.json  final_fff6e056-4704-4890-90bd-c0f2e7349617.json
scripts/: generate_test_audio.py  test_gemini.py  test_llm.py  test_stt.py  ui_demo.py
tests/: test_pipeline.py
tests/regression/: test_cases.py
